fix login & signup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.devtools.restart.exclude=static/**
 spring.devtools.restart.additional-exclude=templates/**
 
-jwt.Secret=my_secret-key
+jwt.Secret=my-secret-key
 jwt.ExpirationMs=86400000
 
 server.error.whitelabel.enabled=false
