--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.generate-ddl=true
 spring.datasource.url=jdbc:mysql://localhost:3306/shoes_store_db
 spring.datasource.username=root
-spring.datasource.password=root
-#spring.datasource.password=duydeptrai
+#spring.datasource.password=root
+spring.datasource.password=duydeptrai
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
