--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,11 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.15.0-rc2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.security.oauth.boot</groupId>
 			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
